# ProofAtlas

./: .gitignore  Makefile  README.md  pyproject.toml
configs/: leanrank_hf_embeddings.yaml  leanrank_real_sample.yaml  proofatlas.yaml  sample.yaml
docs/: index.html  knowledge_graph_design_plan.md  knowledge_graph_design_plan_zh.md  knowledge_graph_execution_plan.md  knowledge_graph_execution_plan_zh.md  leanrank_kg_design_plan.md  leanrank_kg_design_plan_zh.md  leanrank_kg_execution_plan.md  leanrank_kg_execution_plan_zh.md  leanrank_kg_homepage_design.md  leanrank_kg_mvp_step_by_step_plan.md  proofatlas_current_status_and_gap_to_theorem_retrieval.md  proofatlas_delivery_audit.md  proofatlas_deployment_guide.md  proofatlas_homepage_design.md  proofatlas_id_retrieval_experiment_design.md  proofatlas_llm_enhancement_plan.md  proofatlas_next_steps_plan.md  proofatlas_project_summary_en.md  styles.css
homepage/: index.html
notebooks/: leanrank_kg_demo.ipynb
schemas/: file_module.schema.json  premise.schema.json  proof_state.schema.json  proof_technique.schema.json  theorem.schema.json
tests/: test_api.py  test_audit.py  test_cli.py  test_dataset_export.py  test_delivery_docs.py  test_embed.py  test_evaluate_scope.py  test_experiment_report.py  test_features.py  test_lean_check.py  test_lean_diagnostic_report.py  test_metrics.py  test_normalize.py  test_parse_context.py  test_pipeline_profile.py  test_pipeline_timing.py  test_premise_trace_supervision.py  test_profiles.py  test_query.py  test_report.py  test_retrieve.py  test_split_leakage.py  test_validate.py
(+94 files in other folders)
