[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proofatlas"
version = "0.1.0"
description = "Focused in-distribution LeanRank proof retrieval experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "pyarrow",
  "rich",
  "scipy",
  "scikit-learn",
  "typer",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
proofatlas = "proofatlas.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
